--- a/search.css
+++ b/search.css
@@ -1,5 +1,9 @@
-#options {
+#results {
     width: 127px;
-    height: 40px;
+    height: 0px;
     border: 1px solid black;
+}
+
+#text {
+    margin-top: 40px;
 }
