--- a/search2.css
+++ b/search2.css
@@ -1,13 +1,14 @@
 #results {
-    width: 200px;
+    width: 127px;
     height: 0px;
     border: 1px solid black;
-
 }
 
 #text {
     margin-top: 40px;
-    height: 30px;
-    width: 200px;
-    font-size: 18px;
+}
+
+p:hover {
+    color: blue;
+    background-color: yellow;
 }
